--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ winit = "0.26.1"
 png = "0.17.1"
 palette = "0.2.1"
 assert_hex = "0.2.2"
+serde_json = "1.0.59"
+serde = { version = "1.0.117", features = ["derive"] }
