--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wangredux"
+name = "colourtape"
 version = "0.1.0"
 edition = "2021"
 
@@ -10,9 +10,8 @@ glow = "0.11.0"
 glutin = "0.28"
 winit = "0.26.1"
 
-serde_json = "1.0.59"
-serde = { version = "1.0.117", features = ["derive"] }
-
 png = "0.17.1"
 palette = "0.2.1"
 assert_hex = "0.2.2"
+serde_json = "1.0.59"
+serde = { version = "1.0.117", features = ["derive"] }
